<resources>
    <string name="app_name">DelhiSchool</string>

    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="roll_number">Roll number</string>
    <string name="name">Name</string>
    <string name="class_name">Class name</string>
    <string name="class_section">Class Section</string>
    <string name="teacher_id">Teacher Id</string>
    <string name="subject_name">Subject name</string>
    <string name="enter_teacher_id">*Please enter teacher id.</string>
    <string name="enter_roll_number">*Please enter student roll number.</string>
    <string name="enter_name">*Please enter name.</string>
    <string name="enter_subject_name">*Please enter subject name.</string>
    <string name="enter_class_name">*Please enter class name.</string>
    <string name="enter_class_section">*Please enter class section.</string>
    <string name="edit_details">Edit Details</string>
    <string name="add_details">Add Details</string>
    <string name="add">Add</string>
    <string name="student">Student</string>
    <string name="teachers">Teachers</string>
    <string name="welcome">Welcome!!</string>
</resources>
