<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        tools:context=".ui.activity.AddUpdateUserDetailsActivity">

        <include
            android:id="@+id/toolBar"
            layout="@layout/toolbar_layout"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/llFrame"
            android:layout_width="@dimen/_115sdp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBar">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivUserImage"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_110sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:src="@drawable/placeholder" />

            <ImageView
                android:id="@+id/uploadImage"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="end|bottom"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/ic_camera"
                tools:ignore="ContentDescription" />

        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etRollNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/et_rounded_cornor"
            app:layout_constraintTop_toBottomOf="@+id/llFrame">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/roll_number"
                android:imeOptions="actionNext"
                android:maxLength="5"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorEnd"
                android:textSize="@dimen/_14ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/et_rounded_cornor"
            app:layout_constraintTop_toBottomOf="@+id/etRollNumber">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:maxLength="30"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorEnd"
                android:textSize="@dimen/_14ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etClassName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/et_rounded_cornor"
            app:layout_constraintTop_toBottomOf="@+id/etName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/class_name"
                android:imeOptions="actionNext"
                android:maxLength="30"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorEnd"
                android:textSize="@dimen/_14ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etClassSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/et_rounded_cornor"
            app:layout_constraintTop_toBottomOf="@+id/etClassName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/class_section"
                android:imeOptions="actionDone"
                android:maxLength="30"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorEnd"
                android:textSize="@dimen/_14ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAddUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@drawable/btn_background"
            android:text="@string/update"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btnDelete"
            app:layout_constraintTop_toBottomOf="@+id/etClassSection" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/btn_background"
            android:text="@string/delete"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintLeft_toRightOf="@+id/btnAddUpdate"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etClassSection" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>